test/multilocale/local/diten/test_local2.good
test_local2.chpl:11: error: cannot access remote data in local block
