test/multilocale/local/diten/test_local2.prediff
#!/usr/bin/env python

import sys

outfile = sys.argv[2]

with open (outfile, 'r') as f:
    lines = f.readlines()

with open (outfile, 'w') as f:
    for line in lines:
        if 'error: cannot access remote data in local block' in line:
            f.write(line)
